fix(common): hover table display wrong background color

--- a/src/custom/taiga-ui/table.less
+++ b/src/custom/taiga-ui/table.less
@@ -1,5 +1,5 @@
 table[tuiTable] {
-  tr:nth-child(odd) td:not(:hover) {
+  tr:nth-child(odd):not(:hover) td {
     @apply bg-tui-base-02;
   }
 }
